@@ -1,34 +1,32 @@
 <hr />
 
 <p>default:</p>
-<%= import :default %>
+<% gluon :default %>
 
 <hr />
 
 <p>title:</p>
-<%= import :title %>
+<% gluon :title %>
 
 <hr />
 
 <p>no title:</p>
-<%= import :no_title %>
+<% gluon :no_title %>
 
 <hr />
 
 <p>head level:</p>
-<%= import :head_level %>
+<% gluon :head_level %>
 
 <hr />
 
 <p>CSS class:</p>
-<%= import :css_class %>
+<% gluon :css_class %>
 
 <hr />
 
 <p>no messages:</p>
-<%= import :no_messages %>
-
-<hr />
+<% gluon :no_messages %>
 
 <%#
   Local Variables:
